--- a/client/src/components/Input/Question/Question.css
+++ b/client/src/components/Input/Question/Question.css
@@ -10,6 +10,10 @@
     padding: 1.5rem 9rem;
 }
 
+.question-main {
+    float: left;
+}
+
 .input-basic {
     margin-top: 2rem;
     padding-bottom: 1rem;
