--- a/client/src/components/Input/Result/Result.css
+++ b/client/src/components/Input/Result/Result.css
@@ -1,9 +1,10 @@
 .result {
-    margin-top: 18rem;
+    margin-top: 5rem;
     font-size: 1.5rem;
     font-family: Helvetica;
     font-weight: 600;
     color:rgb(255, 255, 255);
+    display: flex;
     float: right;
 }
 
