--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 
 :root {
-  --color-bg: #040C18
+  --color-bg: #040C18;
+  --color-bg2: #aaaaaa;
 }
